posiciones en las esquinas

--- a/parte3/index.html
+++ b/parte3/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<!-- Pon tu codigo aqui -->
+	<head>
+		<title>positioning</title>
+		<meta charset= "UTF-8">
+			<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
 </head>
 <body>
-	<!-- Pon tu codigo aqui -->
+	<div class="rosa"></div>
+	<div class="azul"></div>
+	<div class="verde"></div>
+
 </body>
 </html>
